# YouTube-Chapter-Splitter

./: .gitignore  README.md  Specifications_techniques_MVP.txt  debug_detailed.py  integration_rapide_srt_par_chapitres.md  pyproject.toml  requirements.txt  test_parsing.py  youtube_captions_oauth_guide.md
.claude/: settings.local.json
ytsplit/: __init__.py  __main__.py  cli.py  config.py  models.py
ytsplit/cutting/: __init__.py  ffmpeg.py
ytsplit/io/: __init__.py  naming.py
ytsplit/parsing/: __init__.py  timecode.py
ytsplit/planning/: __init__.py  plan.py
ytsplit/providers/: __init__.py  youtube.py
ytsplit/subtitles/: __init__.py  downloader.py  models.py  parser.py  slicer.py
ytsplit/tests/: __init__.py  test_ffmpeg.py  test_integration_youtube.py  test_models.py  test_planning.py  test_subtitle_downloader.py  test_subtitle_models.py  test_subtitle_parser.py  test_subtitle_slicer.py  test_timecode.py  test_youtube.py
ytsplit/utils/: __init__.py  ffprobe.py
